tests/fixtures/invalid/ord_no_args.py
# ord() requires at least 1 argument
x = ord()
